--- a/web/website0/index.html
+++ b/web/website0/index.html
@@ -24,5 +24,8 @@
         <img src="picture3.jpg" alt="Picture 3">
         <img src="picture4.jpg" alt="Picture 4"> -->
     </section>
+    <section>
+        <a href="picture2.jpg" download="picture2.png">Télécharger l'image</a>
+    </section>
 </body>
 </html>
