--- a/web/website1/error_pages/404.html
+++ b/web/website1/error_pages/404.html
@@ -9,8 +9,8 @@
             font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: black;
-            color: #e74c3c;
+            background-color: #3498db;
+            color: #fff;
         }
 
         h1 {
@@ -18,12 +18,13 @@
         }
 
         p {
-            color: #777;
+            color: #ecf0f1;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
     <h1>404 - Page not found</h1>
-    <p>Sorry, the page you are looking for could not be found. WEBSITE 0</p>
+    <p>Oops! It seems like you've wandered off the beaten path. The page you are looking for could not be found on our Swiss travel website. WEBSITE 0</p>
 </body>
 </html>
