--- a/web/default_error_pages/400.html
+++ b/web/default_error_pages/400.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page not found</title>
+    <title>400 - Bad Request</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: black;
-            color: #e74c3c;
         }
 
         h1 {
@@ -23,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>404 - Page not found</h1>
-    <p>Sorry, the page you are looking for could not be found. WEBSITE 0</p>
+    <h1>400 - Bad Request</h1>
+    <p>Your request is invalid or malformed.</p>
 </body>
 </html>
