--- a/web/website0/error_pages/505.html
+++ b/web/website0/error_pages/505.html
@@ -9,6 +9,8 @@
             font-family: 'Arial', sans-serif;
             text-align: center;
             padding: 50px;
+            background-color: black;
+            color: #e74c3c;
         }
 
         h1 {
