--- a/web/website1/index.html
+++ b/web/website1/index.html
@@ -15,8 +15,24 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome to Our Website</h1>
-        <p>This is the home page.</p>
+        <h1>Welcome to Our Travel Website</h1>
+        <p>
+            Explore the beauty of our featured destinations. Whether you're looking for adventure,
+            relaxation, or cultural experiences, our travel guides have got you covered.
+        </p>
+        <h2>Featured Destinations</h2>
+        <div class="destination">
+            <img src="biel.jpeg" alt="Bienne">
+            <p>Enjoy your stay in Biel/Bienne, la ville du lac.</p>
+        </div>
+        <div class="destination">
+            <img src="vevey.jpeg" alt="Vevey">
+            <p>Discover the charm of Vevey, a picturesque lakeside town.</p>
+        </div>
+        <div class="destination">
+            <img src="valais.jpeg" alt="Valais">
+            <p>Experience the breathtaking landscapes of the Valais region.</p>
+        </div>
     </main>
 </body>
 </html>
