--- a/web/default_error_pages/400.html
+++ b/web/default_error_pages/400.html
@@ -23,5 +23,7 @@
 <body>
     <h1>400 - Bad Request</h1>
     <p>Your request is invalid or malformed.</p>
+    <p>Please check your request and try again.</p>
+    <p>DEFAULT ERROR PAGE</p>
 </body>
 </html>
