--- a/web/default_error_pages/505.html
+++ b/web/default_error_pages/505.html
@@ -23,5 +23,6 @@
 <body>
     <h1>505 - Internal Server Error</h1>
     <p>An internal server error has occurred. Please try again later.</p>
+    <p>DEFAULT ERROR PAGE</p>
 </body>
 </html>
