--- a/web/default_error_pages/403.html
+++ b/web/default_error_pages/403.html
@@ -23,5 +23,6 @@
 <body>
     <h1>403 - Forbidden Access </h1>
     <p>You are not authorized to access this resource.</p>
+    <p>DEFAULT ERROR PAGE</p>
 </body>
 </html>
