--- a/web/default_error_pages/404.html
+++ b/web/default_error_pages/404.html
@@ -23,5 +23,6 @@
 <body>
     <h1>404 - Page not found</h1>
     <p>Sorry, the page you are looking for could not be found.</p>
+    <p>DEFAULT ERROR PAGE</p>
 </body>
 </html>
