CGI in progress

--- a/web/website0/error_pages/502.html
+++ b/web/website0/error_pages/502.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>505 - Internal Server Error</title>
+    <title>502 - Bad Gateway</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            padding: 50px;
             background-color: black;
-            color: #e74c3c;
+
+            padding: 50px;
         }
 
         h1 {
@@ -23,7 +23,8 @@
     </style>
 </head>
 <body>
-    <h1>505 - Internal Server Error</h1>
-    <p>An internal server error has occurred. Please try again later. WEBSITE 0</p>
+    <h1>502 - Service Unavaible</h1>
+    <p>The server received an invalid response from the upstream server.</p>
+    <p>WEBSITE 0</p>
 </body>
 </html>
