--- a/web/website0/error_pages/503.html
+++ b/web/website0/error_pages/503.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page not found</title>
+    <title>502 - Bad Gateway</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            padding: 50px;
             background-color: black;
-            color: #e74c3c;
+
+            padding: 50px;
         }
 
         h1 {
@@ -23,9 +23,8 @@
     </style>
 </head>
 <body>
-    <h1>404 - Page not found</h1>
-    <p>Sorry, the page you are looking for could not be found. WEBSITE 0</p>
+    <h1>503 - Bad Gateway</h1>
+    <p>503 : Service Unavailable (host - port not resolved)</p>
     <p>WEBSITE 0</p>
-
 </body>
 </html>
