--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -20,9 +20,6 @@
     </header>
 	<section id="text">
 		<h1>Téléchargements : </h1>
-	<section>
-
-	<section id="text">
 		<ul>
 			<li><a href="img/albert-camus.jpg" download>Portrait</a></li>
 		</ul>
@@ -30,11 +27,21 @@
 	</section>
 
     <section>
+        <h1>Test méthode POST : </h1>
         <form action="service.html" method="post">
-            <input type="text" name="VoilaLesDatasDuUser">
+            <input type="text" name="DatasUser">
             <input type="submit" value="Submit">
         </form>
-        
+    </section>
+
+    <section>
+        <h1>Test méthode POST pour les CGI python : </h1>
+        <form action="script.py" method="post">
+            <input type="text" name="DatasUser">
+            <input type="text" name="DatasUser2">
+            <input type="text" name="DatasUser3">
+            <input type="submit" value="Submit">
+        </form>
     </section>
 
 
