Lot of details modified

--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -43,6 +43,15 @@
             <input type="submit" value="Submit">
         </form>
     </section>
+    
+    <section>
+        <h1>Upload File</h1>
+        <form action="default.html" method="post" enctype="multipart/form-data">
+            <label for="fileUpload">Choose file to upload:</label>
+            <input type="file" id="fileUpload" name="fileUpload"><br><br>
+            <input type="submit" value="Upload File" name="submit">
+        </form>
+    </section>
 
 
 	<footer>
