--- a/web/website0/error_pages/503.html
+++ b/web/website0/error_pages/503.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>502 - Bad Gateway</title>
+    <title>503 - Service Unavailable </title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>503 - Bad Gateway</h1>
+   
     <p>503 : Service Unavailable (host - port not resolved)</p>
     <p>WEBSITE 0</p>
 </body>
