--- a/web/website0/error_pages/502.html
+++ b/web/website0/error_pages/502.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>502 - Bad Gateway</title>
+    <title>502 - Bad Gateway ou Proxy Error 	R</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>502 - Service Unavaible</h1>
+    <h1>502 - Bad Gateway ou Proxy Error 	R</h1>
     <p>The server received an invalid response from the upstream server.</p>
     <p>WEBSITE 0</p>
 </body>
