--- a/web/website0/error_pages/503.html
+++ b/web/website0/error_pages/503.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-   
+    <h1>503 - Service Unavaible</h1>
     <p>503 : Service Unavailable (host - port not resolved)</p>
     <p>WEBSITE 0</p>
 </body>
