--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -54,6 +54,13 @@
         </form>
     </section>
 
+    <section>
+        <h1>Delete File</h1>
+        <form action="service.html" method="delete">
+            <input type="text" name="FileToDelete">
+            <input type="submit" value="Submit">
+        </form>
+    </section>
 
 	<footer>
 		<p>© 2023 My Website - All Rights Reserved</p>
