DELETE file function added

--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -62,6 +62,12 @@
         </form>
     </section>
 
+    <form action="default.html" method="post">
+        <input type="text" name="FileToDelete">
+        <input type="submit" value="Submit">
+    </form>
+    
+
 	<footer>
 		<p>© 2023 My Website - All Rights Reserved</p>
 		<p>Contact us: contact@example.com</p>
