--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -47,25 +47,14 @@
 
     <section>
         <h1>Upload File</h1>
-        <form action="default.html" method="post" enctype="multipart/form-data">
+        <form action="uploadOK.html" method="post" enctype="multipart/form-data">
             <label for="fileUpload">Choose file to upload:</label>
             <input type="file" id="fileUpload" name="fileUpload"><br><br>
             <input type="submit" value="Upload File" name="submit">
         </form>
     </section>
 
-    <section>
-        <h1>Delete File</h1>
-        <form action="service.html" method="delete">
-            <input type="text" name="FileToDelete">
-            <input type="submit" value="Submit">
-        </form>
-    </section>
 
-    <form action="default.html" method="post">
-        <input type="text" name="FileToDelete">
-        <input type="submit" value="Submit">
-    </form>
     
 
 	<footer>
