--- a/web/website0/service.html
+++ b/web/website0/service.html
@@ -19,15 +19,23 @@
         </nav>
     </header>
 	<section id="text">
-		<h1>Téléchargements : </h1>
+		<h1>Test Téléchargements : </h1>
 		<ul>
 			<li><a href="img/albert-camus.jpg" download>Portrait</a></li>
 		</ul>
-
 	</section>
 
     <section>
-        <h1>Test méthode POST : </h1>
+        <h1>Test size body : </h1>
+        <form form action="service.html" method="post">
+            <textarea id="DataUser" name="DataUser" rows="10" cols="175">
+            </textarea><br>
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
+    <section>
+        <h1>Test size body : </h1>
         <form action="service.html" method="post">
             <input type="text" name="DatasUser">
             <input type="submit" value="Submit">
@@ -44,7 +52,6 @@
         </form>
     </section>
 
-
     <section>
         <h1>Upload File</h1>
         <form action="uploadOK.html" method="post" enctype="multipart/form-data">
@@ -53,9 +60,6 @@
             <input type="submit" value="Upload File" name="submit">
         </form>
     </section>
-
-
-    
 
 	<footer>
 		<p>© 2023 My Website - All Rights Reserved</p>
