--- a/web/website1/index.html
+++ b/web/website1/index.html
@@ -5,34 +5,15 @@
     <link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Welcome to Our Travel Website</h1>
-        <p>
-            Explore the beauty of our featured destinations. Whether you're looking for adventure,
-            relaxation, or cultural experiences, our travel guides have got you covered.
-        </p>
-        <h2>Featured Destinations</h2>
-        <div class="destination">
-            <img src="biel.jpeg" alt="Bienne">
-            <p>Enjoy your stay in Biel/Bienne, la ville du lac.</p>
-        </div>
-        <div class="destination">
-            <img src="vevey.jpeg" alt="Vevey">
-            <p>Discover the charm of Vevey, a picturesque lakeside town.</p>
-        </div>
-        <div class="destination">
-            <img src="valais.jpeg" alt="Valais">
-            <p>Experience the breathtaking landscapes of the Valais region.</p>
-        </div>
-    </main>
+    <h1>Welcome to Our Travel Website</h1>
+    <p>
+        Explore the beauty of our featured destinations. Whether you're looking for adventure,
+        relaxation, or cultural experiences, our travel guides have got you covered.
+    </p>
+    <h2>Featured Destinations</h2>
+    <div class="destination">
+        <img src="valais.jpeg" alt="Valais">
+        <p>Enjoy your stay in Valais.</p>
+    </div>
 </body>
 </html>
