--- a/web/website0/about.html
+++ b/web/website0/about.html
@@ -23,7 +23,7 @@
 	<section>
 
     <section id="gallery">
-        <img src="img/albert-camus.jpg" alt="Picture 1">
+        <img src="/img/albert-camus.jpg" alt="Picture 1">
     </section>
 
 	<section id="text">
