--- a/web/default_error_pages/502.html
+++ b/web/default_error_pages/502.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>502 - Service Unavaible</h1>
+    <h1>502 - Bad Gateway</h1>
     <p>The server received an invalid response from the upstream server.</p>
     <p>DEFAULT ERROR PAGE</p>
 </body>
